# Data-Science-Nailgun

./: .gitignore  README.md  main.py  pyproject.toml  run_reviews_experiment.py  test_extra_trees_quantile.py
ds_nailgun/configs/examples/: quantile_test_experiment_config.yaml  reviews_quantile_0.5_experiment_config.yaml  reviews_quantile_0.5_experiment_config_extra.yaml  titanic_data_config.yaml  titanic_data_config_alt.yaml  titanic_experiment_config.yaml
ds_nailgun/configs/model_presets/: catboost_quantile_0.5_config.yaml  catboost_quantile_config.yaml  extra_trees_quantile_0.5_config.yaml  extra_trees_quantile_config.yaml  gradient_boosting_quantile_0.5_config.yaml  gradient_boosting_quantile_config.yaml  hist_gradient_boosting_config.yaml  lightgbm_quantile_0.5_config.yaml  lightgbm_quantile_config.yaml  quantile_forest_0.5_config.yaml  quantile_forest_config.yaml  quantile_regressor_config.yaml  random_forest_classifier.yaml  random_forest_classifier_config.yaml  xgboost_classifier.yaml  xgboost_classifier_config.yaml  xgboost_quantile_0.5_config.yaml  xgboost_quantile_config.yaml
ds_nailgun/configs/templates/: data_config_template.yaml  ensemble_config_template.yaml  experiment_config_template.yaml  model_config_template.yaml
ds_nailgun/nailgun/: configs.py  consts.py  controller.py  data_loader.py  dataloader.py  model_factory.py  optuna_search.py  post_controller.py  post_experiment.py  preprocessing.py
scripts/: experiment_demo.py  post_experiment_demo.py
scripts/tests/: test_dataloader.py  test_experiment.py  test_model.py  test_preprocessing.py
(+6 files in other folders)
